feat: end game messages